--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/CSS/reset.css">
     <link rel="stylesheet" href="./Assets/CSS/style.css">
     <title>Portfolio</title>
 </head>
 
 <body>
     <header class="header">
-        <h1>Lernantino</h1>
+        <h1>Cfinn</h1>
         <nav class="text-right">
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -21,51 +22,50 @@
         </nav>
     </header>
 
-    <main>
-        <section class="bannerimage">
-          <h2>Cool subtitle here!</h2>
-        </section>
-    </img>
+<main>
+    <section class="bannerimage">
+        <h2>Cool subtitle here!</h2>
+    </section>
 
-    <main>
-        <section>
-            <article class="about-me">
-                <h3>About Me</h3>
-                <div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis voluptatibus ad quidem ex maxime amet enim, voluptate quia accusantium reiciendis error veniam fugiat quae incidunt deserunt velit voluptatum excepturi nam.</p>
-                </div>
-            </article>
+    <section>
+        <article class="about-me">
+            <h3>About Me</h3>
+            <div class="text">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, tempore quis quam eum, ex quas quo repellendus illum ullam facilis enim dolore. Iste repellat dolorum quaerat beatae ad, officia fugit?</p>
+            </div>
+        </article>
 
-            <article class="work">
-                <h3>Work</h3>
-                <div class="top-image-box">
-                    <img src="./Assets/02-portfolio-4.jpg" alt="Surf Report" width="200px" height="200px">
-                    <div class="bottom-left">Surf Report</div>
-                </div>
+        <article class="work">
+            <h3>Work</h3>
+            <article>
+            <div class="top-image-box">
+                <img src="./Assets/SoundQuest.png" alt="Surf Report" width="200px" height="200px">
+                <div class="bottom-left">Sound Quest</div>
+            </div>
 
-                <div class="box">
+            <div class="box">
                     <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall" width="200px" height="200px">
-                <div class="bottom-left">LED Wall</div>
+                <h4 class="bottom-left">LED Wall</h4>
                     <img src="./Assets/02-portfolio-2.jpg" alt="Calculator" width="200px" height="200px">
-                <div class="bottom-left">Calculator</div>
+                <h4 class="bottom-left">Calculator</h4>
                     <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles" width="200px" height="200px">
-                <div class="bottom-left">Pastel Puzzels</div>
+                <h4 class="bottom-left">Pastel Puzzels</h4>
                     <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy" width="200px" height="200px">
-                <div class="bottom-left">Run Buddy</div>
-                </div>
-
+                <h4 class="bottom-left">Run Buddy</h4>
+            </div>
             </article>
+        </article>
             
         </section>
 
         <footer>
             <h3>Contact Me</h3>
-            <ul>
-                <li><a class="tel" href="tel:+555-555-5555">555-555-5555</a></li>
-                <li><a class="ler" href="lernantino@website.com">lenantino@website.com</a></li>
-                <li><a class="git" href="github.com">GitHub</a></li>
-                <li><a class="twi" href="twitter.com">Twitter</a></li>
-                <li><a class="spo" href="spotify.com">Spotify</a></li>
+            <ul class="contact-info">
+                <li><a href="tel:+555-555-5555">555-555-5555</a></li>
+                <li><a href="lernantino@website.com">lenantino@website.com</a></li>
+                <li><a href="github.com">GitHub</a></li>
+                <li><a href="twitter.com">Twitter</a></li>
+                <li><a href="spotify.com">Spotify</a></li>
             </ul>
         </footer>
     </main>
