--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header">
-        <h1>Cfinn</h1>
+        <h1>Chelsey Finn</h1>
         <nav class="text-right">
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -24,7 +24,7 @@
 
 <main>
     <section class="bannerimage">
-        <h2>Cool subtitle here!</h2>
+        <h2>Welcome to my page!</h2>
     </section>
 
     <section>
@@ -61,11 +61,9 @@
         <footer>
             <h3>Contact Me</h3>
             <ul class="contact-info">
-                <li><a href="tel:+555-555-5555">555-555-5555</a></li>
-                <li><a href="lernantino@website.com">lenantino@website.com</a></li>
-                <li><a href="github.com">GitHub</a></li>
-                <li><a href="twitter.com">Twitter</a></li>
-                <li><a href="spotify.com">Spotify</a></li>
+                <li><a href="tel:+689-247-7666">Phone</a></li>
+                <li><a href="cfinn7789@gmail.com">Email</a></li>
+                <li><a href="https://github.com/cfinn7789">GitHub</a></li>
             </ul>
         </footer>
     </main>
