fixed some formatting issues

--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <header class="header">
         <h1>Chelsey Finn</h1>
         <nav class="text-right">
-            <ul>
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
                 <li><a href="#resume">Resume</a></li>
-            </ul>
         </nav>
     </header>
 
@@ -28,32 +26,30 @@
     </section>
 
     <section>
-        <article class="about-me">
-            <h3>About Me</h3>
+        <aside class="about-me">
+            <h3>About <br> Me</h3>
             <div class="text">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, tempore quis quam eum, ex quas quo repellendus illum ullam facilis enim dolore. Iste repellat dolorum quaerat beatae ad, officia fugit?</p>
+                <p>My name is Chelsey Finn. I was born in West Chester Ohio and moved to Florida in 2019. Currently I'm working on completing the UCF coding bootcamp so that I may find a job in that field! My skills so far are HTML, CSS, and JS.</p>
             </div>
-        </article>
+        </aside>
 
         <article class="work">
             <h3>Work</h3>
-            <article>
             <div class="top-image-box">
                 <img src="./Assets/SoundQuest.png" alt="Surf Report" width="200px" height="200px">
                 <div class="bottom-left">Sound Quest</div>
             </div>
 
-            <div class="box">
-                    <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall" width="200px" height="200px">
-                <h4 class="bottom-left">LED Wall</h4>
-                    <img src="./Assets/02-portfolio-2.jpg" alt="Calculator" width="200px" height="200px">
-                <h4 class="bottom-left">Calculator</h4>
-                    <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles" width="200px" height="200px">
-                <h4 class="bottom-left">Pastel Puzzels</h4>
-                    <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy" width="200px" height="200px">
-                <h4 class="bottom-left">Run Buddy</h4>
+            <div class="box-1">
+                <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall" width="200px" height="200px">
+                <div class="bottom-left">LED Wall</div>
+                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator" width="200px" height="200px">
+                <div class="bottom-left">Calculator</div>
+                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles" width="200px" height="200px">
+                <div class="bottom-left">Pastel Puzzels</div>
+                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy" width="200px" height="200px">
+                <div class="bottom-left">Run Buddy</div>
             </div>
-            </article>
         </article>
             
         </section>
