--- a/index.html
+++ b/index.html
@@ -36,19 +36,17 @@
         <article class="work">
             <h3>Work</h3>
             <div class="top-image-box">
-                <img src="./Assets/SoundQuest.png" alt="Surf Report" width="200px" height="200px">
+                <img src="./Assets/SoundQuest.png">
                 <div class="bottom-left">Sound Quest</div>
             </div>
 
             <div class="box-1">
-                <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall" width="200px" height="200px">
-                <div class="bottom-left">LED Wall</div>
-                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator" width="200px" height="200px">
-                <div class="bottom-left">Calculator</div>
-                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles" width="200px" height="200px">
-                <div class="bottom-left">Pastel Puzzels</div>
-                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy" width="200px" height="200px">
-                <div class="bottom-left">Run Buddy</div>
+                <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall">
+                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator">
+            </div>
+            <div class="box-2">
+                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles">
+                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy">
             </div>
         </article>
             
