more image adjustments

--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 
             <div class="box-1">
                 <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall">
+                <h4>Project Name</h4>
                 <img src="./Assets/02-portfolio-2.jpg" alt="Calculator">
+                <h4>Project Name</h4>
             </div>
             <div class="box-2">
                 <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles">
+                <h4>Project Name</h4>
                 <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy">
+                <h4>Project Name</h4>
             </div>
         </article>
             
