added link to soundquest

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
             <h3>Work</h3>
             <div class="top-image-box">
                 <img src="./Assets/SoundQuest.png">
-                <div class="bottom-left">Sound Quest</div>
+                <a href="https://holdenmg.github.io/sound-quest/" class="bottom-left">Sound Quest</a>
             </div>
 
             <div class="box-1">
                 <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall">
-                <h4>Project Name</h4>
+                <div class="bottom-left">Project Name</div>
                 <img src="./Assets/02-portfolio-2.jpg" alt="Calculator">
-                <h4>Project Name</h4>
+                <div class="bottom-left">Project Name</div>
             </div>
             <div class="box-2">
                 <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles">
-                <h4>Project Name</h4>
+                <div class="bottom-left">Project Name</div>
                 <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy">
-                <h4>Project Name</h4>
+                <div class="bottom-left">Project Name</div>
             </div>
         </article>
             
