adjusted contact info

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <footer>
             <h3>Contact Me</h3>
             <ul class="contact-info">
-                <li><a href="tel:+689-247-7666">Phone</a></li>
-                <li><a href="cfinn7789@gmail.com">Email</a></li>
+                <li><a href="tel:+689-247-7666">689-247-7666</a></li>
+                <li><a href="cfinn7789@gmail.com">cfinn7789@gmail.com</a></li>
                 <li><a href="https://github.com/cfinn7789">GitHub</a></li>
             </ul>
         </footer>
