added border line

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Welcome to my page!</h2>
     </section>
 
-    <section>
+    <section class="projects">
         <aside class="about-me">
             <h3>About <br> Me</h3>
             <div class="text">
