fixed html and some css

--- a/index.html
+++ b/index.html
@@ -21,43 +21,62 @@
     </header>
 
 <main>
+
     <section class="bannerimage">
         <h2>Welcome to my page!</h2>
     </section>
 
-    <section class="projects">
-        <aside class="about-me">
+    <section class="about-section">
+        <div class="about-me">
             <h3>About <br> Me</h3>
-            <div class="text">
-                <p>My name is Chelsey Finn. I was born in West Chester Ohio and moved to Florida in 2019. Currently I'm working on completing the UCF coding bootcamp so that I may find a job in that field! My skills so far are HTML, CSS, and JS.</p>
-            </div>
-        </aside>
+        </div>
+        <div class="text">
+            <p>My name is Chelsey Finn. I was born in West Chester Ohio and moved to Florida in 2019. Currently I'm working on completing the UCF coding bootcamp so that I may find a job in that field! My skills so far are HTML, CSS, and JS.</p>
+        </div>
+    </section>
 
-        <article class="work">
+    <section class="work-section">
+        <div class="work">
             <h3>Work</h3>
+        </div>
+        <div class="image-container">
             <div class="top-image-box">
-                <img src="./Assets/SoundQuest.png">
-                <a href="https://holdenmg.github.io/sound-quest/" class="bottom-left">Sound Quest</a>
+                <img src="./Assets/SoundQuest.png" width="100%">
+                <div class="bottom-left">
+                <a class="project" href="https://holdenmg.github.io/sound-quest/">Sound Quest</a>
+                </div>
             </div>
-
             <div class="box-1">
                 <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall">
-                <div class="bottom-left">Project Name</div>
-                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator">
-                <div class="bottom-left">Project Name</div>
+                <div class="bottom-left">
+                <a class="project" href=""></a>
+                </div>
             </div>
             <div class="box-2">
-                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles">
-                <div class="bottom-left">Project Name</div>
-                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy">
-                <div class="bottom-left">Project Name</div>
+                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator">
+                <div class="bottom-left">
+                <a class="project" href=""></a>
+                </div>
             </div>
-        </article>
-            
-        </section>
+            <div class="box-3">
+                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles">
+                <div class="bottom-left">
+                <a class="project" href=""></a>
+                </div>
+            </div>
+            <div class="box-4">
+                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy">
+                <div class="bottom-left">
+                <a class="project" href=""></a>
+                </div>
+            </div>
+        </div>      
+    </section>
 
-        <footer>
+        <footer class="footer">
+            <div class="contact">
             <h3>Contact Me</h3>
+            </div>
             <ul class="contact-info">
                 <li><a href="tel:+689-247-7666">689-247-7666</a></li>
                 <li><a href="cfinn7789@gmail.com">cfinn7789@gmail.com</a></li>
