--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
                 </div>
             </div>
             <div class="box-1">
-                <img src="./Assets/02-portfolio-1.jpg" alt="LED Wall">
+                <img src="./Assets/02-portfolio-1.png" alt="LED Wall" width="100%">
+                <div class="bottom-left">
+                <a class="project" href="https://shrouded-springs-93967-4ef63984c8fc.herokuapp.com/">An App Called Quest</a>
+                </div>
+            </div>
+            <div class="box-1">
+                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator" width="100%">
                 <div class="bottom-left">
                 <a class="project" href=""></a>
                 </div>
             </div>
-            <div class="box-2">
-                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator">
+            <div class="box-1">
+                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles" width="100%">
                 <div class="bottom-left">
                 <a class="project" href=""></a>
                 </div>
             </div>
-            <div class="box-3">
-                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles">
-                <div class="bottom-left">
-                <a class="project" href=""></a>
-                </div>
-            </div>
-            <div class="box-4">
-                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy">
+            <div class="box-1">
+                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy" width="100%">
                 <div class="bottom-left">
                 <a class="project" href=""></a>
                 </div>
