--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>About <br> Me</h3>
         </div>
         <div class="text">
-            <p>My name is Chelsey Finn. I was born in West Chester Ohio and moved to Florida in 2019. Currently I'm working on completing the UCF coding bootcamp so that I may find a job in that field! My skills so far are HTML, CSS, and JS.</p>
+            <p>Hello. I'm Chelsey, a 23 year old web developer with a certificate in full-stack web development. I have worked with both front-end and back-end technologies including HTML, CSS, JavaScript, React, Node.js, and Express.</p>
         </div>
     </section>
 
@@ -40,35 +40,20 @@
             <h3>Work</h3>
         </div>
         <div class="image-container">
-            <div class="top-image-box">
-                <img src="./Assets/SoundQuest.png" width="100%">
-                <div class="bottom-left">
-                <a class="project" href="https://holdenmg.github.io/sound-quest/">Sound Quest</a>
-                </div>
+            <div class="box-1">
+                <a class="project" href="https://holdenmg.github.io/sound-quest/">
+                    <img src="./Assets/SoundQuest.png" class="image" width="100%">
+                </a>
             </div>
             <div class="box-1">
-                <img src="./Assets/02-portfolio-1.png" alt="LED Wall" width="100%">
-                <div class="bottom-left">
-                <a class="project" href="https://shrouded-springs-93967-4ef63984c8fc.herokuapp.com/">An App Called Quest</a>
-                </div>
+                <a class="project" href="https://shrouded-springs-93967-4ef63984c8fc.herokuapp.com/">
+                    <img src="./Assets/02-portfolio-1.png" class="image" width="100%">
+                </a>
             </div>
             <div class="box-1">
-                <img src="./Assets/02-portfolio-2.jpg" alt="Calculator" width="100%">
-                <div class="bottom-left">
-                <a class="project" href=""></a>
-                </div>
-            </div>
-            <div class="box-1">
-                <img src="./Assets/02-portfolio-3.jpg" alt="Pastel Puzzles" width="100%">
-                <div class="bottom-left">
-                <a class="project" href=""></a>
-                </div>
-            </div>
-            <div class="box-1">
-                <img src="./Assets/02-run-buddy.jpg" alt="Run Buddy" width="100%">
-                <div class="bottom-left">
-                <a class="project" href=""></a>
-                </div>
+                <a class="project" href="https://github.com/jeseh7/igr">
+                    <img src="./Assets/02-portfolio-2.png" class="image" width="100%">
+                </a>
             </div>
         </div>      
     </section>
